--- a/src/components/AuthForm/AuthForm.module.css
+++ b/src/components/AuthForm/AuthForm.module.css
@@ -1,3 +1,15 @@
-.container {
-    /* width: 50%; */
+@media screen and (min-width:768px) {
+    .container {
+        width: 50%;
+    }
+}
+
+.tabs {
+    background-color: #eeeeee;
+    border-radius: 100px;
+    margin: auto;
+}
+
+.tab {
+    border-radius: 100px !important;
 }
